# pinn-enterprise-platform

./: CLOUDFLARE_DEPLOYMENT_GUIDE.md  COMPLETE_DEMO_SUCCESS.md  DEPLOYMENT.md  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_SUMMARY.md  ENTERPRISE_PLATFORM_COMPLETE.md  ENTERPRISE_PLATFORM_SUMMARY.md  GOLF_BALL_TEST_SUMMARY.md  INTEGRATION_GUIDE.md  PINN_PLATFORM_SUMMARY.md  QUICK_START.md  README.md  REALTIME_WORKFLOW_GUIDE.md  SERVER_SUCCESS_SUMMARY.md  package.json  requirements.txt  serverless.yml
coagents-pinn-solver/: README.md  deploy.sh
coagents-pinn-solver/agent/: .env.example  Dockerfile  langgraph.json  pyproject.toml
coagents-pinn-solver/agent/pinn_solver/: __init__.py  demo.py
coagents-pinn-solver/agent/pinn_solver/core/: __init__.py  pinn_client.py  pinn_workflow.py
coagents-pinn-solver/agent/pinn_solver/langgraph/: __init__.py  agent.py
coagents-pinn-solver/agent/pinn_solver/tools/: __init__.py  pinn_tools.py
coagents-pinn-solver/ui/: .env.example  next.config.js  package.json
container/pinn_training_service/: Dockerfile  app.py  requirements.txt
examples/: heat_transfer_example.py
handlers/: api_coordinator.py  inference_handler.py  pinn_analyzer.py  resource_optimizer.py  training_coordinator.py
infrastructure/: ecs-training-service.yml
monitoring/: cloudwatch_dashboard.json
opensource-pinn-platform/: .env.example  README.md  docker-compose.yml  start-dev.sh  start-simple.py  start.sh  start_enterprise_api.py  start_server.py  test_enterprise_platform.py
pinn-workers-deploy/: README.md  package.json  wrangler.toml
pinn-workers-deploy/src/: index.js
scripts/: build-layers.sh  deploy-containers.sh  deploy-infrastructure.sh
tests/: test_api.py
(+53 files in other folders)
